--- a/css/style.css
+++ b/css/style.css
@@ -725,9 +725,9 @@ input[type="radio"].visually-hidden {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: baseline;
-	    -ms-flex-align: baseline;
-	        align-items: baseline;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	margin-left: 73px;
 	padding-top: 24px;
 	padding-bottom: 20px;
